# Scrape-Post-Bot

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker.yml
app/: main.py
app/adapters/: __init__.py  base.py  blog_adapter.py  registry.py  rss_adapter.py
app/api/: deps.py
app/api/routes/: health.py
app/api/v1/: drafts.py  pipeline.py  sources.py
app/config/prompts/: evaluation.yaml  generation.yaml
app/core/: config.py  logging.py  redis.py  security.py
app/infrastructure/: __init__.py  rate_limiter.py  retry.py  robots_checker.py
app/middleware/: correlation.py
app/models/: __init__.py  content_item.py  draft.py  source_config.py
app/pipeline/: dedup.py  evaluator.py  generator.py  prompts.py  worker.py
app/scheduler/: __init__.py  jobs.py  scheduler.py
app/services/: baseline.py  content_extractor.py  content_queue.py  draft_store.py  metrics.py
frontend/: package-lock.json
frontend/src/: App.jsx  index.css  theme.js
frontend/src/api/: client.js
frontend/src/components/: Layout.jsx  ui.jsx
frontend/src/hooks/: useApi.js
frontend/src/pages/: Dashboard.jsx  Drafts.jsx  Sources.jsx
frontend/src/utils/: format.js
