[project]
name = "news-post"
version = "0.1.0"
description = "AI news monitoring and social media automation"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]~=0.128.0",
    "redis[hiredis]~=7.1.0",
    "pydantic-settings~=2.12.0",
    "python-json-logger~=3.2.0",
    "aiolimiter~=1.2.0",
    "protego~=0.3.0",
    "tenacity~=9.0.0",
    "httpx~=0.28.0",
    "loguru>=0.7.3",
    "beautifulsoup4>=4.14.3",
    "curl-cffi>=0.14.0",
    "litellm>=1.81.11",
    "uvicorn>=0.40.0",
    "orjson>=3.11.9",
    "apscheduler>=3.11.2",
    "trafilatura>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
]
